--- a/css/main.css
+++ b/css/main.css
@@ -23,93 +23,6 @@ body {
   background: #CCDDE8;
 }
 
-.loaderArea {
-  background: -webkit-gradient(linear, left top, right top, color-stop(10%, #08478C), color-stop(90%, #006894));
-  background: linear-gradient(90deg, #08478C 10%, #006894 90%);
-  overflow: hidden;
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 100000;
-}
-
-.loaderArea .loader {
-  height: 40px;
-  width: 40px;
-  position: absolute;
-  left: 50%;
-  margin-left: -20px;
-  top: 50%;
-  margin-top: -20px;
-}
-
-.loaderArea .loader:before,
-.loaderArea .loader:after {
-  content: "";
-  height: 40px;
-  width: 40px;
-  border: 8px solid rgba(255, 255, 255, 0.5);
-  border-radius: 10px;
-  position: absolute;
-  top: 0;
-}
-
-.loaderArea .loader:before {
-  -webkit-animation: animate 2s infinite linear;
-          animation: animate 2s infinite linear;
-}
-
-@-webkit-keyframes animate {
-  0% {
-    -webkit-transform: rotate(0) skew(0);
-            transform: rotate(0) skew(0);
-  }
-  100% {
-    -webkit-transform: rotate(180deg) skew(360deg);
-            transform: rotate(180deg) skew(360deg);
-  }
-}
-
-@keyframes animate {
-  0% {
-    -webkit-transform: rotate(0) skew(0);
-            transform: rotate(0) skew(0);
-  }
-  100% {
-    -webkit-transform: rotate(180deg) skew(360deg);
-            transform: rotate(180deg) skew(360deg);
-  }
-}
-
-.loaderArea .loader:after {
-  -webkit-animation: animate2 2s infinite linear;
-          animation: animate2 2s infinite linear;
-}
-
-@-webkit-keyframes animate2 {
-  0% {
-    -webkit-transform: rotate(0) skew(0);
-            transform: rotate(0) skew(0);
-  }
-  100% {
-    -webkit-transform: rotate(-180deg) skew(-360deg);
-            transform: rotate(-180deg) skew(-360deg);
-  }
-}
-
-@keyframes animate2 {
-  0% {
-    -webkit-transform: rotate(0) skew(0);
-            transform: rotate(0) skew(0);
-  }
-  100% {
-    -webkit-transform: rotate(-180deg) skew(-360deg);
-            transform: rotate(-180deg) skew(-360deg);
-  }
-}
-
 .container > nav {
   background-color: #B7C8D3;
 }
@@ -239,9 +152,17 @@ body {
 
 .container > .row .col-sm-5 .p-2 .d-flex .info > a img {
   height: 100px;
+  width: 150px;
 }
 
 .container > .row .col-sm-5 .p-2 .d-flex .info > a {
+  color: #000000e6;
+  opacity: 0.85;
+}
+
+.container > .row .col-sm-5 .p-2 .d-flex .info > a:hover {
+  text-decoration: none;
+  opacity: 1;
   color: #08478C;
 }
 
@@ -305,7 +226,7 @@ body {
 
 @media screen and (min-width: 300px) {
   #accordion .card .card-body .row .col-sm-6 .modal-content .modal-body img {
-    width: 370px;
+    width: 350px;
   }
 }
 
@@ -446,6 +367,24 @@ table.table {
 .about .col-sm-6 img {
   width: 600px;
   padding: 2rem;
+}
+
+.news-block {
+  background-color: #CCDDE8;
+  padding: 1rem;
+}
+
+.news-block h3 {
+  color: #08478C;
+}
+
+.news-block .col-sm-6 {
+  background-color: #B7C8D3;
+  padding: 1rem;
+}
+
+.news-block .col-sm-6 img {
+  width: 580px;
 }
 
 footer .container-fluid {
