--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&subset=cyrillic");
 p,
 span,
@@ -80,6 +81,7 @@ body {
   padding: 1rem;
   border-radius: .8rem;
   font-size: 1.1rem;
+  margin-bottom: 1rem;
 }
 
 #accordion .card .card-body .row .services img {
@@ -100,73 +102,76 @@ body {
   padding: .14rem;
 }
 
+/* Новости-блок
 .block {
+    background: $body-color;
+    padding-top: 1rem;
+
+    h4 {
+        color: $primary-color-dark;
+        padding: 1rem;
+        margin: 0;
+        font-weight: 700;
+    }
+
+    .row {
+        margin: 0;
+
+        .col-12,
+        .col-sm-12,
+        .col-md-6,
+        .col-xl-4 {
+            padding: 0;
+            margin: 0;
+
+            .news-block {
+                background: $body-color-dark;
+                border-radius: .8rem;
+                margin: 1rem;
+                padding: 1rem;
+
+                .news-text {
+                    padding: 1rem;
+
+                    a {
+                        color: $text-color;
+
+                        &:hover {
+                            text-decoration: none;
+                            color: $primary-color;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+*/
+.block-partners {
   background: #CCDDE8;
-  padding-top: 1rem;
-}
-
-.block h4 {
-  color: #08478C;
   padding: 1rem;
-  margin: 0;
   font-weight: 700;
-}
-
-.block .row {
   margin: 0;
+  color: #08478C;
 }
 
-.block .row .col-12,
-.block .row .col-sm-12,
-.block .row .col-md-6,
-.block .row .col-xl-4 {
+.block-partners .row {
   padding: 0;
   margin: 0;
-}
-
-.block .row .col-12 .news-block,
-.block .row .col-sm-12 .news-block,
-.block .row .col-md-6 .news-block,
-.block .row .col-xl-4 .news-block {
-  background: #B7C8D3;
-  border-radius: .8rem;
-  margin: 1rem;
-  padding: 1rem;
-}
-
-.block .row .col-12 .news-block .news-text,
-.block .row .col-sm-12 .news-block .news-text,
-.block .row .col-md-6 .news-block .news-text,
-.block .row .col-xl-4 .news-block .news-text {
-  padding: 1rem;
-}
-
-.block .row .col-12 .news-block .news-text a,
-.block .row .col-sm-12 .news-block .news-text a,
-.block .row .col-md-6 .news-block .news-text a,
-.block .row .col-xl-4 .news-block .news-text a {
-  color: #000000e6;
-}
-
-.block .row .col-12 .news-block .news-text a:hover,
-.block .row .col-sm-12 .news-block .news-text a:hover,
-.block .row .col-md-6 .news-block .news-text a:hover,
-.block .row .col-xl-4 .news-block .news-text a:hover {
-  text-decoration: none;
-  color: #006894;
-}
-
-.carousel > h4 {
-  background: #CCDDE8;
-  padding: 1rem;
-  font-weight: 700;
-  margin: 0;
-  color: #08478C;
 }
 
 .partners {
   padding: 3rem 0;
   background: #CCDDE8;
+}
+
+.partners img {
+  height: 90px;
+  opacity: .75;
+}
+
+.partners img:hover {
+  opacity: 1;
 }
 
 footer {
