--- a/css/main.scss
+++ b/css/main.scss
@@ -99,6 +99,7 @@ body {
                     padding: 1rem;
                     border-radius: .8rem;
                     font-size: 1.1rem;
+                    margin-bottom: 1rem;
 
                     img {
                         margin: .1rem 1.5rem;
@@ -121,7 +122,7 @@ body {
     }
 }
 
-// Новости-блок
+/* Новости-блок
 .block {
     background: $body-color;
     padding-top: 1rem;
@@ -165,18 +166,30 @@ body {
         }
     }
 }
+*/
 
 // Партнеры
-.carousel > h4 {
+.block-partners {
     background: $body-color;
     padding: 1rem;
     font-weight: 700;
     margin: 0;
     color: $primary-color-dark;
+    .row {
+        padding: 0;
+        margin: 0;
+    }
 }
 .partners {
     padding: 3rem 0;
     background: $body-color;
+    img {
+        height: 90px;
+        opacity: .75;
+        &:hover {
+            opacity: 1;
+        }
+    }
 }
 
 // Footer
