--- a/css/main.css
+++ b/css/main.css
@@ -78,28 +78,35 @@ body {
 
 #accordion .card .card-body .row .services {
   background: #B7C8D3;
-  padding: 1rem;
   border-radius: .8rem;
-  font-size: 1.1rem;
+}
+
+#accordion .card .card-body .row .services p {
+  padding: 1rem;
+  font-size: 1rem;
   margin-bottom: 1rem;
 }
 
+#accordion .card .card-body .row .services li > img {
+  width: 80px;
+}
+
 #accordion .card .card-body .row .services img {
-  margin: .1rem 1.5rem;
+  width: 100%;
 }
 
 #accordion .card .card-body .row .services ul {
-  padding: 0;
+  padding: 0 1rem;
 }
 
 #accordion .card .card-body .row .services ul h5 {
-  padding: 0.3rem 1.3rem;
+  padding: 0 0rem;
 }
 
 #accordion .card .card-body .row .services ul li {
   list-style: none;
   margin: 0;
-  padding: .14rem;
+  padding: .5rem;
 }
 
 /* Новости-блок
