--- a/css/main.scss
+++ b/css/main.scss
@@ -96,24 +96,32 @@ body {
 
                 .services {
                     background: $body-color-dark;
-                    padding: 1rem;
                     border-radius: .8rem;
-                    font-size: 1.1rem;
-                    margin-bottom: 1rem;
+                    p {
+                        
+                        padding: 1rem;
 
+                        font-size: 1rem;
+                        margin-bottom: 1rem;
+                    }
+                    li > img {
+                        width: 80px;
+                    }
                     img {
-                        margin: .1rem 1.5rem;
+                        width: 100%;
                     }
 
                     ul {
-                        padding: 0;
+                        padding: 0 1rem;
+
                         h5 {
-                            padding: 0.3rem 1.3rem;
+                            padding: 0 0rem;
                         }
+
                         li {
                             list-style: none;
                             margin: 0;
-                            padding: .14rem;
+                            padding: .5rem;
                         }
                     }
                 }
@@ -175,17 +183,21 @@ body {
     font-weight: 700;
     margin: 0;
     color: $primary-color-dark;
+
     .row {
         padding: 0;
         margin: 0;
     }
 }
+
 .partners {
     padding: 3rem 0;
     background: $body-color;
+
     img {
         height: 90px;
         opacity: .75;
+
         &:hover {
             opacity: 1;
         }
@@ -193,21 +205,25 @@ body {
 }
 
 // Footer
-footer  {
+footer {
     background: $body-color-dark;
+
     .row {
         padding: 0;
         margin: 0;
-    .footer {
-        padding: 1rem;
-        p {
-            padding: .3rem;
-            font-size: .9rem;
-            margin: 0;
-        }
-        .img {
+
+        .footer {
             padding: 1rem;
+
+            p {
+                padding: .3rem;
+                font-size: .9rem;
+                margin: 0;
+            }
+
+            .img {
+                padding: 1rem;
+            }
         }
-    }   
     }
 }
