--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&subset=cyrillic");
 p,
 span,
@@ -76,101 +75,113 @@ body {
   background: #CCDDE8;
 }
 
+#accordion .card .card-body h5 {
+  color: #08478C;
+  padding-top: 1rem;
+}
+
 #accordion .card .card-body .row .services {
   background: #B7C8D3;
-  border-radius: .8rem;
+  border-radius: .75rem;
 }
 
 #accordion .card .card-body .row .services p {
-  padding: .3rem 1rem;
+  padding: .4rem 1rem;
   margin: 0;
-  font-size: 1rem;
-}
-
-#accordion .card .card-body .row .services li > img {
-  width: 150px;
-}
-
-#accordion .card .card-body .row .services li.test {
-  padding: 0.52rem 8rem;
-  background: url(../img/cov-nocolor.png) no-repeat;
-}
-
-#accordion .card .card-body .row .services li.test:hover {
-  background: url(../img/cov.png) no-repeat;
-}
-
-#accordion .card .card-body .row .services li.test:focus {
-  background: url(../img/cov.png) no-repeat;
 }
 
 #accordion .card .card-body .row .services img {
   width: 100%;
 }
 
-#accordion .card .card-body .row .services ul {
-  padding: 0 1rem;
-}
-
-#accordion .card .card-body .row .services ul h5 {
-  padding-top: .5rem;
-  color: #08478C;
+#accordion .card .card-body .row .services h5 {
+  padding: .3rem 1rem;
 }
 
 #accordion .card .card-body .row .services ul li {
-  list-style: none;
-  margin: 0;
-  padding: .5rem;
+  list-style-type: none;
 }
 
-/* Новости-блок
+#accordion .card .card-body .row .rc {
+  padding: 1rem;
+}
+
+#accordion .card .card-body .row .rc img {
+  width: 100%;
+}
+
+#accordion .card .card-body .row .rc p {
+  color: #08478C;
+  text-align: center;
+  padding-top: .3rem;
+  font-size: 1.3rem;
+}
+
 .block {
-    background: $body-color;
-    padding-top: 1rem;
-
-    h4 {
-        color: $primary-color-dark;
-        padding: 1rem;
-        margin: 0;
-        font-weight: 700;
-    }
-
-    .row {
-        margin: 0;
-
-        .col-12,
-        .col-sm-12,
-        .col-md-6,
-        .col-xl-4 {
-            padding: 0;
-            margin: 0;
-
-            .news-block {
-                background: $body-color-dark;
-                border-radius: .8rem;
-                margin: 1rem;
-                padding: 1rem;
-
-                .news-text {
-                    padding: 1rem;
-
-                    a {
-                        color: $text-color;
-
-                        &:hover {
-                            text-decoration: none;
-                            color: $primary-color;
-                        }
-                    }
-                }
-            }
-        }
-    }
+  background: #CCDDE8;
+  padding-top: 1rem;
 }
-*/
+
+.block h4 {
+  color: #08478C;
+  padding: 1rem;
+  margin: 0;
+  font-weight: 700;
+}
+
+.block .row {
+  margin: 0;
+}
+
+.block .row .col-12 .news-block,
+.block .row .col-sm-12 .news-block,
+.block .row .col-md-12 .news-block,
+.block .row .col-xl-4 .news-block {
+  background: #B7C8D3;
+  border-radius: .8rem;
+  padding: 1rem;
+}
+
+.block .row .col-12 .news-block h5,
+.block .row .col-sm-12 .news-block h5,
+.block .row .col-md-12 .news-block h5,
+.block .row .col-xl-4 .news-block h5 {
+  color: #08478C;
+  padding: 1rem;
+}
+
+.block .row .col-12 .news-block img,
+.block .row .col-sm-12 .news-block img,
+.block .row .col-md-12 .news-block img,
+.block .row .col-xl-4 .news-block img {
+  width: 100%;
+}
+
+.block .row .col-12 .news-block a,
+.block .row .col-sm-12 .news-block a,
+.block .row .col-md-12 .news-block a,
+.block .row .col-xl-4 .news-block a {
+  color: #000000e6;
+}
+
+.block .row .col-12 .news-block a:hover,
+.block .row .col-sm-12 .news-block a:hover,
+.block .row .col-md-12 .news-block a:hover,
+.block .row .col-xl-4 .news-block a:hover {
+  text-decoration: none;
+  color: #006894;
+}
+
+.block .row .col-12 .news-block a p,
+.block .row .col-sm-12 .news-block a p,
+.block .row .col-md-12 .news-block a p,
+.block .row .col-xl-4 .news-block a p {
+  padding: 0.3rem;
+  margin-bottom: 0;
+}
+
 .block-partners {
   background: #CCDDE8;
-  padding: 1rem;
   font-weight: 700;
   margin: 0;
   color: #08478C;
