--- a/css/main.scss
+++ b/css/main.scss
@@ -92,56 +92,58 @@ body {
         .card-body {
             background: $body-color;
 
+            h5 {
+                color: $primary-color-dark;
+                padding-top: 1rem;
+            }
+
             .row {
 
                 .services {
                     background: $body-color-dark;
-                    border-radius: .8rem;
-                    p {
-                        
-                        padding: .3rem 1rem;
-                        margin: 0;
+                    border-radius: .75rem;
 
-                        font-size: 1rem;
+                    p {
+                        padding: .4rem 1rem;
+                        margin: 0;
                     }
-                    li > img {
-                        width: 150px;
-                    }
-                    li.test {
-                        padding: 0.52rem 8rem;
-                        background: url(../img/cov-nocolor.png) no-repeat;
-                        &:hover {
-                            background: url(../img/cov.png) no-repeat;
-                        }
-                        &:focus {
-                            background: url(../img/cov.png) no-repeat;
-                        }
-                    }
+
                     img {
                         width: 100%;
                     }
 
+                    h5 {
+                        padding: .3rem 1rem;
+                    }
+
                     ul {
-                        padding: 0 1rem;
-
-                        h5 {
-                            padding-top: .5rem;
-                            color: $primary-color-dark;
-                        }
-
                         li {
-                            list-style: none;
-                            margin: 0;
-                            padding: .5rem;
+                            list-style-type: none;
                         }
                     }
+                }
+
+                .rc {
+                    padding: 1rem;
+
+                    img {
+                        width: 100%;
+                    }
+
+                    p {
+                        color: $primary-color-dark;
+                        text-align: center;
+                        padding-top: .3rem;
+                        font-size: 1.3rem;
+                    }
+
                 }
             }
         }
     }
 }
 
-/* Новости-блок
+//Новости-блок
 .block {
     background: $body-color;
     padding-top: 1rem;
@@ -158,39 +160,44 @@ body {
 
         .col-12,
         .col-sm-12,
-        .col-md-6,
+        .col-md-12,
         .col-xl-4 {
-            padding: 0;
-            margin: 0;
 
             .news-block {
                 background: $body-color-dark;
                 border-radius: .8rem;
-                margin: 1rem;
                 padding: 1rem;
 
-                .news-text {
+                h5 {
+                    color: $primary-color-dark;
                     padding: 1rem;
+                }
 
-                    a {
-                        color: $text-color;
+                img {
+                    width: 100%;
+                }
 
-                        &:hover {
-                            text-decoration: none;
-                            color: $primary-color;
-                        }
+                a {
+                    color: $text-color;
+
+                    &:hover {
+                        text-decoration: none;
+                        color: $primary-color;
+                    }
+
+                    p {
+                        padding: 0.3rem;
+                        margin-bottom: 0;
                     }
                 }
             }
         }
     }
 }
-*/
 
 // Партнеры
 .block-partners {
     background: $body-color;
-    padding: 1rem;
     font-weight: 700;
     margin: 0;
     color: $primary-color-dark;
