--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,28 @@ body {
   color: #008AC3;
 }
 
+.licenses {
+  background: #CCDDE8;
+}
+
+.licenses h4 {
+  color: #08478C;
+  padding: 1rem;
+}
+
+.licenses .row {
+  padding: 0;
+  margin: 0;
+}
+
+.licenses .row .col-12 {
+  padding-bottom: 1.5rem;
+}
+
+.licenses .row .col-12 a img {
+  width: 100%;
+}
+
 footer {
   background: #B7C8D3;
 }
