--- a/css/main.css
+++ b/css/main.css
@@ -284,20 +284,21 @@ body {
 }
 
 .licenses h4 {
+  margin: 0rem;
   color: #08478C;
   padding: 1rem;
 }
 
-.licenses .row {
+.row {
   padding: 0;
   margin: 0;
 }
 
-.licenses .row .col-12 {
+.row .col-12 {
   padding-bottom: 1.5rem;
 }
 
-.licenses .row .col-12 a img {
+.row .col-12 a img {
   width: 100%;
 }
 
