--- a/css/main.scss
+++ b/css/main.scss
@@ -301,11 +301,12 @@ body {
     }
 
     }
-    .row {
+    #show {
         padding: 0;
         margin: 0;
         .col-12 {
             padding-bottom: 1.5rem;
+            
             a {
                 img {
                     width: 100%;
