--- a/css/main.scss
+++ b/css/main.scss
@@ -36,7 +36,7 @@ body {
 
 // Навбар
 .container-fluid {
-    background: url(../img/main.jpg);
+    background: url(../img/main/main.jpg);
     padding-bottom: 8.4rem;
 
     .navbar {
@@ -291,6 +291,10 @@ body {
 }
 
 // О компании(стр)
+
+.info {
+    background: $body-color;
+}
 
 .licenses {
     background: $body-color;
