--- a/css/main.scss
+++ b/css/main.scss
@@ -35,11 +35,8 @@ body {
 }
 
 // Навбар
-.container-fluid {
-    background: url(../img/main/main.jpg);
-    padding-bottom: 8.4rem;
-
     .navbar {
+        background: $body-color-dark;
         .nav-item>.nav-link {
             color: $primary-color;
 
@@ -64,15 +61,6 @@ body {
             font-weight: 700;
         }
     }
-
-    .name {
-        p {
-            padding: 9rem 0 6rem 11.5rem;
-            font-size: 2rem;
-            color: $primary-color-dark;
-        }
-    }
-}
 
 // Услуги-блок
 #accordion {
